[package]
name = "alphaxiv-cli"
version = "0.5.1"
edition = "2024"
rust-version = "1.85.0"
description = "cli for alphaxiv.org - search, browse, and read arxiv papers"
license = "WTFPL"
repository = "https://github.com/sigkillme0/alphaxiv-cli"
keywords = ["arxiv", "papers", "research", "cli", "alphaxiv"]
categories = ["command-line-utilities", "science"]

[[bin]]
name = "alphaxiv"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4", features = ["derive"] }
futures = "0.3"
owo-colors = "4"
reqwest = "0.13"
scraper = "0.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
struct_excessive_bools = "allow"
too_many_lines = "allow"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
